<resources>
    <string name="app_name">CourseWork</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Ваше имя</string>
    <string name="name_of_expert">Имя</string>
    <string name="about">О себе</string>
    <string name="category">Навыки в сфере</string>
    <string name="chose_category">Выберите навык</string>
    <string name="time">Удобное время</string>
    <string name="btn_done">Войти</string>
    <string name="btn_exit">Выйти</string>
    <string name="btn_edit">Изменить</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="btn_make">Создать Аккаунт</string>
    <string name="fields_mistake">Все поля должны быть заполнены</string>
    <string name="email_mistake">Такой пользователь уже существует</string>
    <string name="user_mistake">Такого пользователя не существует</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_feed">Лента</string>
    <string name="title_request">Заявки</string>
    <string name="title_profile">Профиль</string>
    <string name="empty_field">Пустое поле</string>
    <string name="edit_name">Изменить имя</string>
    <string name="edit_about">Изменить поле о себе</string>
    <string name="edit_category">Изменить категорию</string>
    <string name="edit_time">Изменить поле время</string>
    <string name="save">Сохранить</string>
    <string name="pull_request">Отправить заявку</string>

    <string-array name="categories">
        <item>Java</item>
        <item>Kotlin</item>
        <item>C++</item>
        <item>Английский</item>
        <item>Немецкий</item>
        <item>Русский</item>
    </string-array>
</resources>